# data-science-for-cyberattack-detection

./: .gitignore  README.md  pyproject.toml
notebooks/: 1-exploratory-analysis.ipynb  1-reading-raw-data.ipynb  2-exploratory-analysis.ipynb  3-models.ipynb
scripts/: download_data.py
