[tool.poetry]
name = "cyberattack-detection"
version = "0.1.0"
description = ""
authors = ["gabrielonishi <gabriel.onishi@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pathlib = "^1.0.1"
ruff = "^0.9.1"
ipykernel = "^6.29.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
